api-404-fix.log
  File "/var/www/modern-drive/api.py", line 242
    elif self.path == "/api/health":
    ^
IndentationError: expected an indented block after 'elif' statement on line 241
